--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -8,7 +8,7 @@
       <app-loading></app-loading>
     }
     @if (nameCategory) {
-    <h1 class="title-item"> {{ upperFirstLetter(nameCategory) }} </h1>
+      <h1 class="title-item"> {{ upperFirstLetter(nameCategory) }} </h1>
     }
     <mat-menu #items="matMenu">
       <button mat-menu-item [matMenuTriggerFor]="pocket">Pocket Items</button>
@@ -139,12 +139,13 @@
       <ng-container matColumnDef="expand">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let item" class="expand-cell">
-          <button mat-icon-button aria-label="expand row" class="expand-button" (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
+          <button mat-icon-button aria-label="expand row" class="expand-button"
+            (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
             @if (expandedElement === item) {
-              <mat-icon>keyboard_arrow_up</mat-icon>
+            <mat-icon>keyboard_arrow_up</mat-icon>
             }
             @else {
-              <mat-icon>keyboard_arrow_down</mat-icon>
+            <mat-icon>keyboard_arrow_down</mat-icon>
             }
           </button>
         </td>
@@ -156,7 +157,7 @@
           <div class="element-detail" [@detailExpand]="item == expandedElement ? 'expanded' : 'collapsed'">
             <div class="element-description">
               @for (effect of item.effect_entries; track effect) {
-              <span class="element-description-attribution"> {{effect.effect}} </span>
+                <span class="element-description-attribution"> {{effect.effect}} </span>
               }
             </div>
           </div>
