--- a/src/app/components/ability-list/ability-list.component.html
+++ b/src/app/components/ability-list/ability-list.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="content">
     @if (loading) {
-      <app-loading></app-loading>
+    <app-loading></app-loading>
     }
     <!-- Filter -->
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input />
     </mat-form-field>
-    
+
     <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows matSort
       (matSortChange)="announceSortChange($event)">
       <!-- ID Column -->
@@ -27,11 +27,12 @@
       <ng-container matColumnDef="expand">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let item" class="expand-cell">
-          <button mat-icon-button aria-label="expand row" class="expand-button" (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
+          <button mat-icon-button aria-label="expand row" class="expand-button"
+            (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
             @if (expandedElement === item) {
-              <mat-icon>keyboard_arrow_up</mat-icon>
+            <mat-icon>keyboard_arrow_up</mat-icon>
             } @else {
-              <mat-icon>keyboard_arrow_down</mat-icon>
+            <mat-icon>keyboard_arrow_down</mat-icon>
             }
           </button>
         </td>
@@ -44,9 +45,10 @@
             <div class="element-description">
               @for (effect of element.effect_entries; track effect) {
                 @if(effect.language.name === 'en') {
-                  <span class="element-description-attribution"> {{effect.short_effect}} </span>
+                <span class="element-description-attribution"> {{effect.short_effect}} </span>
                 }
               }
+              <app-pokemon-learn [pokemon]="element.pokemon"></app-pokemon-learn>
             </div>
           </div>
         </td>
