Removing unnecessary css

--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -16,9 +16,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
           Name
         </th>
-        <td mat-cell *matCellDef="let move">
-          {{ upperFirstLetter(move.name) }}
-        </td>
+        <td mat-cell *matCellDef="let move">{{ upperFirstLetter(move.name) }}</td>
       </ng-container>
 
       <!-- Type Column -->
@@ -51,12 +49,11 @@
         <td mat-cell *matCellDef="let move" class="expand-cell">
           <button mat-icon-button aria-label="expand row" class="expand-button" (click)="
               expandedElement = expandedElement === move ? null : move;
-              $event.stopPropagation()
-            ">
+              $event.stopPropagation()">
             @if (expandedElement === move) {
-            <mat-icon>keyboard_arrow_up</mat-icon>
+              <mat-icon>keyboard_arrow_up</mat-icon>
             } @else {
-            <mat-icon>keyboard_arrow_down</mat-icon>
+              <mat-icon>keyboard_arrow_down</mat-icon>
             }
           </button>
         </td>
