adjustment component to work on two scereens

--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -71,7 +71,7 @@
                 </span>
               }
               <p>PP: {{ move.pp }}</p>
-              <app-pokemon-learn [pokemon]="move.pokemon"></app-pokemon-learn>
+              <app-pokemon-learn [pokemon]="move.learned_by_pokemon"></app-pokemon-learn>
             </div>
           </div>
         </td>
