--- a/src/app/components/pokemon-learn/pokemon-learn.component.html
+++ b/src/app/components/pokemon-learn/pokemon-learn.component.html
@@ -9,9 +9,9 @@
   </mat-card-header>
   <mat-card-content>
     @for (poke of pokemon; track poke) {
-      @if (extractValidPokemon(poke.pokemon) === true) {
-        <div class="poke-box" (click)="pokeModal(poke.pokemon.name)">
-          <span class="text">{{upperFirstLetter(poke.pokemon.name)}}</span>
+      @if (extractValidPokemon(poke) === true) {
+        <div class="poke-box" (click)="pokeModal(getPokemonNameForDetails(poke))">
+          <span class="text">{{ getPokemonName(poke) }}</span>
         </div>
       }
     }
