refactor learned poke component

--- a/src/app/components/ability-list/ability-list.component.html
+++ b/src/app/components/ability-list/ability-list.component.html
@@ -48,7 +48,7 @@
                   <span class="element-description-attribution"> {{effect.short_effect}} </span>
                 }
               }
-              <app-pokemon-learn [pokemon]="element.pokemon"></app-pokemon-learn>
+              <app-pokemon-learn [pokemon]="formatType(element)"></app-pokemon-learn>
             </div>
           </div>
         </td>
