--- a/src/app/components/pokemon-details/pokemon-details.component.css
+++ b/src/app/components/pokemon-details/pokemon-details.component.css
@@ -1,10 +1,7 @@
 .overflow-container {
   overflow: auto;
   max-height: calc(100vh - 100px);
-}
-
-.pokemon-detail {
-  background-color: white;
+  max-width: 750px;
 }
 
 .title {
@@ -12,11 +9,17 @@
   padding-left: 2px;
 }
 
+mat-card-title-group {
+  display: flex;
+  justify-content: center;
+}
+
 .title-type {
   font-size: 20px;
   padding-left: 2px;
   padding-right: 1em;
   padding-top: 9px;
+  display: flex;
 }
 
 .pokemon-info-container {
@@ -24,25 +27,56 @@
   margin-bottom: 4px;
 }
 
-app-moves {
-  margin-top: -3%;
-}
-
 .pokemon-artwork {
   width: 300px;
   height: auto;
 }
 
-.stats {
-  padding-bottom: 2px;
+.types {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.abilities {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.abilities-card {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .title-stat {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: rgb(77, 17, 17);
-  font-size: 20px;
-  margin-bottom: 10%;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(238, 52, 52);
+  text-shadow: 1px 1px 2px rgb(112, 0, 0);
+  margin-bottom: 2%;
+  margin-top: 2%;
+}
+
+.name-stat {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 2px black;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .title-total-stat {
@@ -52,15 +86,6 @@ app-moves {
   margin-bottom: 10%;
   margin-top: 10%;
   display: flex;
-}
-
-
-.name-stat {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: rgb(138, 33, 33);
-  text-transform: uppercase;
-  font-size: 14px;
-  margin-left: 10px;
 }
 
 .progress-bar {
@@ -89,14 +114,18 @@ app-moves {
   margin-right: 3px;
 }
 
-.text-center {
-  text-align: center;
+.pokeinfo-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 375vh;
 }
 
-.pokemon-abilities {
-  padding-left: 10%;
-  display: flex;
-  flex-direction: column;
+.pokestats-right {
+  width: 375vh;
+}
+
+.text-center {
   text-align: center;
 }
 
@@ -126,14 +155,32 @@ app-moves {
   color: white;
 }
 
+.custom-progress-bar {
+  width: 70%;
+  height: 13px;
+  background-color: #e0e0e0;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.custom-progress {
+  height: 100%;
+  background-color: #4caf50;
+  border-radius: 4px;
+  border-color: rgb(61, 61, 61);
+}
+
+.pokemon-ability-container {
+  display: flex;
+}
+
+
 @media (max-width: 890px) {
   .pokemon-info-container {
     flex-wrap: wrap;
-  }
-
-  .pokemon-abilities {
-    margin-bottom: 50px;
-    padding-left: 3%;
   }
 
   .pokemon-info-container {
@@ -142,8 +189,7 @@ app-moves {
   }
 
   .title-stat {
-    margin-left: 3em;
-    font-size: 23px;
+    font-size: 18px;
   }
 
   .title-total-stat {
@@ -170,12 +216,5 @@ app-moves {
     margin-left: 1px;
     margin-right: 5px;
     height: 4px;
-  }
-}
-
-@media (max-width: 640px) {
-  .pokemon-abilities {
-    margin-bottom: 50px;
-    padding-left: 6%;
   }
 }
