--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2,69 +2,98 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    height: 100%;
 }
 
-.home-card {
-    justify-content: center;
-    width: calc(25% - 1%);
-    margin: 0.5%;
-    box-sizing: border-box;
-    min-width: 180px;
-    background-color: #3F51B5;
+.pokedex-container,
+.move-container,
+.items-container {
+    width: 100%;
+    height: 33.33%;
+    min-height: 250px;
+    display: flex;
     cursor: pointer;
+    overflow: hidden;
+    align-items: center;
 }
 
-
-.home-card img {
-    height: 90%;
-    object-fit: cover;
+.pokedex-container img,
+.move-container img,
+.items-container img {
+    max-width: 90%;
+    height: 28vh;
+    transition: transform 1.8s ease;
+    position: absolute;
+    min-height: 200px;
 }
 
-mat-card-header {
+.pokedex-container {
+    background: rgb(173,58,180);
+    background: linear-gradient(90deg, #1C86EE, #6495ED, #B0E0E6);
+    justify-content: flex-start;
+    margin-top: 4%;
+}
+
+.move-container {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, #4169E1, #4682B4, #87CEEB);
     justify-content: center;
 }
 
-mat-card-title {
-    font-size: 28px;
-    color: #FFFF;
+.items-container {
+    background: rgb(34,193,195);
+    background: linear-gradient(90deg, #27408B, #3A5FCD, #778899);
+    justify-content: flex-end;
 }
 
-p {
-    text-align: center;
-    padding-top: 8px;
-    font-weight: bold;
+.pokedex-container:hover img {
+    transform: translateX(30%);
 }
 
-img {
-    width: calc(94 - 100);
-    margin: 3%;
-    border-radius: 6px;
+.move-container:hover img {
+    transform: translateX(25%);
 }
 
-.home-card:hover {
-    animation: card-pulse 1.2s ease-in-out infinite;
+.items-container:hover img {
+    transform: translateX(-30%);
 }
 
-@keyframes card-pulse {
-    0% {
-        transform: scale(1);
+.pokedex-container,
+.move-container,
+.items-container {
+    transition: opacity 0.3s ease;
+}
+
+.pokedex-container:hover {
+    background: linear-gradient(90deg, #1A76CE, #5485DD, #A0D0E6);
+}
+
+.move-container:hover {
+    background: linear-gradient(90deg, #3755C1, #4072A4, #77B6EB);
+}
+
+.items-container:hover {
+    background: linear-gradient(90deg, #22326B, #3353B0, #6E8289);
+}
+
+@media (min-width: 1300px) {
+    .pokedex-container:hover img, 
+    .move-container:hover img {
+        transform: translateX(43%);
     }
 
-    50% {
-        transform: scale(1.03);
-    }
-
-    100% {
-        transform: scale(1);
+    .items-container:hover img {
+        transform: translateX(-43%);
     }
 }
 
-@media(max-width: 1167px) {
-    p {
-        font-size: 12px;
+@media (max-width: 970px) {
+    .pokedex-container:hover img, 
+    .move-container:hover img {
+        transform: translateX(13%);
     }
 
-    mat-card-title {
-        font-size: 25px;
+    .items-container:hover img {
+        transform: translateX(-13%);
     }
 }
