--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,6 +28,8 @@
     </a>
   </mat-toolbar-row>
 </mat-toolbar>
-<header class="docs-primary-header component-page-header" *ngIf="!hideHeader">
-  <h2> {{ componentName }} </h2>
-</header>
+@if (!hideHeader) {
+  <header class="docs-primary-header component-page-header">
+    <h2> {{ componentName }} </h2>
+  </header>
+}
