--- a/src/app/components/battle-setup/battle-setup.component.css
+++ b/src/app/components/battle-setup/battle-setup.component.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
+  align-items: center;
 }
 
 .select-pokemon {
@@ -25,18 +26,26 @@ app-moves {
 .example-card {
   display: flex;
   flex-direction: row;
-  width: calc(96% - 4%);
+  justify-content: center;
+  align-items: center;
   margin: 2%;
 }
 
 .pokemon-artwork {
-  width: 140px;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  width: auto;
   height: auto;
+
 }
 
 .vs-image {
-  width: 230px;
+  width: 215px;
   height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .battle-button {
@@ -58,20 +67,22 @@ app-moves {
 
 .pokemon-empty {
   display: flex;
-  background-color: white;
-  width: calc(96% - 4%);
-  margin: 2%;
-  border-radius: 10px;
   justify-content: center;
   align-items: center;
   height: 50vh;
+  margin: 2%;
+  border-radius: 10px;
 }
 
 .info-poke {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   flex: 1;
+  overflow: hidden;
+  max-height: 250px;
+  min-height: 250px;
 }
 
 .pokemon-stats {
@@ -85,11 +96,11 @@ app-moves {
 
 .move-set {
   display: flex;
-  width: calc(96% - 4%);
+  justify-content: center;
+  align-items: center;
   margin: 2%;
   flex-wrap: wrap;
   border-radius: 5px;
-  justify-content: center;
   padding-bottom: 10px;
 }
 
@@ -138,4 +149,64 @@ mat-card-subtitle {
     flex-wrap: wrap;
     justify-content: center;
   }
+}
+
+.stats {
+  width: 100%;
+}
+
+.name-stat {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 2px black;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-progress-bar {
+  width: 85%;
+  height: 11px;
+  background-color: #e0e0e0;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.custom-progress {
+  height: 100%;
+  background-color: #4caf50;
+  border-radius: 4px;
+  border-color: rgb(61, 61, 61);
+}
+
+.title-stat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 2px rgb(255, 255, 255);
+  margin-bottom: 2%;
+  margin-top: 2%;
+}
+
+.title-empty {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 25px;
+  font-weight: bold;
+  color: rgb(95, 0, 0);
+  text-shadow: 1px 1px 2px rgb(212, 1, 1);
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
