--- a/src/app/components/battle-setup/battle-setup.component.html
+++ b/src/app/components/battle-setup/battle-setup.component.html
@@ -22,11 +22,13 @@
                         <span class="title-stat"> Stats </span>
                         @for (stats of playerPokemon.stats; track stats) {
                             <div class="stats">
-                                <span class="name-stat"> {{ upperFirstLetter(stats.stat.name) }} : {{ stats.base_stat }} </span>
-                                <mat-progress-bar class="progress-bar" mode="determinate"
-                                    value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>
+                              <span class="name-stat"> {{ stats.stat.name }} : {{ stats.base_stat }} </span>
+                              <div class="custom-progress-bar">
+                                <div class="custom-progress" [ngStyle]="{ 'width': (stats.base_stat / 255) * 100 + '%' }"></div>
+                              </div>
                             </div>
                         }
+                        <span class="title-stat"> Total: {{ total }} </span>
                     </div>
                 </mat-card-content>
             </mat-card>
@@ -115,13 +117,15 @@
                 <mat-card-content>
                     <div class="pokemon-stats">
                         <span class="title-stat"> Stats </span>
-                        @for (stats of enemyPokemon.stats; track stats) {
+                        @for (stats of playerPokemon.stats; track stats) {
                             <div class="stats">
-                                <span class="name-stat"> {{ upperFirstLetter(stats.stat.name) }} : {{ stats.base_stat }} </span>
-                                <mat-progress-bar class="progress-bar" mode="determinate"
-                                    value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>
+                              <span class="name-stat"> {{ stats.stat.name }} : {{ stats.base_stat }} </span>
+                              <div class="custom-progress-bar">
+                                <div class="custom-progress" [ngStyle]="{ 'width': (stats.base_stat / 255) * 100 + '%' }"></div>
+                              </div>
                             </div>
                         }
+                        <span class="title-stat"> Total: {{ total }} </span>
                     </div>
                 </mat-card-content>
             </mat-card>
