--- a/src/app/components/battle-fight/battle-fight.component.css
+++ b/src/app/components/battle-fight/battle-fight.component.css
@@ -83,3 +83,24 @@
 .battle-text {
   color: white;
 }
+
+.custom-progress-bar {
+  width: 70%;
+  height: 13px;
+  background-color: #e0e0e0;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: inset 0 0 0 2px white;
+  border: 2px solid black;
+}
+
+.custom-progress {
+  height: 100%;
+  background-color: #4caf50;
+  border-radius: 4px;
+  border-color: rgb(61, 61, 61);
+  transition: width 0.4s ease-in-out;
+}
