--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,7 @@
       <button mat-menu-item routerLink="/items">Items</button>
       <button mat-menu-item routerLink="/abilities">Abilities</button>
       <button mat-menu-item routerLink="/natures">Natures</button>
+      <button mat-menu-item routerLink="/battle">Battle</button>
     </mat-menu>
     <button mat-button>
       <a routerLink="/home"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
