--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -30,12 +30,33 @@
       </div>
     </div>
     <mat-card-content>
+      @if(pokeImages.length > 1) {
+        <div class="evolutions">
+          <div class="test" *ngFor="let pokemonImage of pokeImages; let i = index; let last = last">
+            <div class="poke">
+              <img class="pokemon-artwork-evolution"
+              [src]="pokemonImage.pokeImage"
+              alt="Imagem do Pokémon">   
+              @if(pokemonImage.lvlUp) {
+                <p>Level {{pokemonImage.lvlUp}}</p>
+              } 
+              @else if (pokemonImage.item != 'null') {
+                <p>{{ upperFirstLetter(pokemonImage.item)}}</p>
+              }
+              @else if (pokemonImage.trigger != 'null') {
+                <p>{{ upperFirstLetter(pokemonImage.trigger)}}</p>
+              }
+            </div>
+            <mat-icon *ngIf="!last">arrow_forward</mat-icon>
+          </div>
+        </div>
+      }
       <div class="types">
         <span class="title-type">Types:</span>
         @for (poke of pokemon.types; track poke) {
-        <div clas="type-info">
-          <img class="type-icon" [src]="getTypeDetailImageUrl(poke.type.name)" alt="Tipo do Pokémon">
-        </div>
+          <div clas="type-info">
+            <img class="type-icon" [src]="getTypeDetailImageUrl(poke.type.name)" alt="Tipo do Pokémon">
+          </div>
         }
       </div>
     </mat-card-content>
