feat: tests with variables

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,6 +23,9 @@
     <span [ngClass]="{'selected': selectedSpan === 'abilities'}"><a mat-button routerLink="/abilities" (click)="selectSpan('abilities')">Abilities</a></span>
     <span [ngClass]="{'selected': selectedSpan === 'natures'}"><a mat-button routerLink="/natures" (click)="selectSpan('natures')">Natures</a></span>
     <span class="spacer"></span>
+    <button mat-button (click)="toggleDarkMode()">
+      <mat-icon>brightness_medium</mat-icon>
+    </button>
     <a href="https://github.com/Diagnoster/pokeapi-angular">
       <button mat-icon-button class="favorite-icon" aria-label="Favorite icon">
         <mat-icon>favorite</mat-icon>
