feat: adjust tables and natures

--- a/src/app/components/nature-list/nature-list.component.html
+++ b/src/app/components/nature-list/nature-list.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container-nature">
     <div class="content">
         <h1>What is Nature?</h1>
         <mat-divider></mat-divider>
