--- a/src/app/components/nature-list/nature-list.component.css
+++ b/src/app/components/nature-list/nature-list.component.css
@@ -1,4 +1,4 @@
-.container {
+.container-nature {
     align-items: center;
     text-align: center;
     width: 100%;
@@ -48,7 +48,7 @@ mat-card {
 }
 
 mat-card:hover {
-    box-shadow: 2px 3px 3px 3px #3f51b5;;
+    box-shadow: 2px 3px 3px 3px #cfd2e5;;
 }
 
 mat-card-content {
