--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,5 +1,6 @@
 mat-toolbar {
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
   width: 100%;
@@ -18,12 +19,18 @@ mat-toolbar {
 .logo {
   height: 80px;
   width: auto;
-  padding-top: 4px;
-  margin-right: 2em;
+  margin: 7vh;
+  margin-left: 10%;
+  display: flex;
+  align-items: start;
+}
+
+.selects {
+  margin-left: 2%;
 }
 
 .menu-list {
-  margin-right: 2em;
+  margin-right: 2vh;
 }
 
 span {
@@ -59,7 +66,13 @@ header {
   border-bottom: 2px solid rgba(0, 0, 0, 0.158);
 }
 
-@media (max-width: 980px) {
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 1100px) {
   header {
     margin-top: 55px;
   }
@@ -68,11 +81,10 @@ header {
     display: none;
   }
 
-  .menu-list {
-    margin-right: 1em;
+  .main-header .buttons {
+    width: 100%;
+    justify-content: end;
+
   }
 
-  .mat-toolbar .mat-mdc-button-base.mat-mdc-button-base.mat-unthemed {
-    flex: 1 1 auto;
-  }
 }
