--- a/src/app/components/battle-setup/battle-setup.component.css
+++ b/src/app/components/battle-setup/battle-setup.component.css
@@ -1,13 +1,8 @@
 .container {
   display: flex;
-  width: 100%;
-}
-
-.choose-pokemon {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
   align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .select-pokemon {
@@ -21,6 +16,10 @@
 app-moves {
   width: calc(96% - 4%);
   margin: 2%;
+}
+
+.choose-pokemon {
+  width: 100%;
 }
 
 .example-card {
@@ -37,21 +36,20 @@ app-moves {
   object-fit: contain;
   width: auto;
   height: auto;
-
-}
-
-.vs-image {
-  width: 215px;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .battle-button {
   background-color: #3F51B5;
   color: white;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 45px;
+  padding: 2%;
+  margin-top: 3%;
+  overflow: hidden;
 }
 
 .type-icon {
