--- a/src/styles.css
+++ b/src/styles.css
@@ -251,4 +251,12 @@ body.dark-mode .battle-button {
   background-color: var(--minimal-black-background);
 }
 
+body.dark-mode mat-autocomplete {
+  background-color: var(--minimal-black-background);
+}
+
+body.dark-mode .mat-mdc-option.mdc-list-item {
+  background: var(--black-background);
+}
+
 /********************************** End Dark Mode Theme **********************************/
